# accel-pptp

./: CMakeLists.txt  README  README.md  ppp_path_check.c
src/: dirutil.c  dirutil.h  orckit_quirks.c  orckit_quirks.h  pptp.c  pptp.h.in  pptp_callmgr.c  pptp_callmgr.h  pptp_ctrl.c  pptp_ctrl.h  pptp_msg.h  pptp_quirks.c  pptp_quirks.h  util.c  util.h  vector.c  vector.h
